--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-VITE_TEST_EMAIL_ADDRESS="y7pzz.test@inbox.testmail.app"
+VITE_TEST_EMAIL_ADDRESS="j4n2x.test@inbox.testmail.app"
 VITE_TEST_EMAIL_SUBJECT="LucidGrowth ESP & Header Analysis"
 VITE_API_BASE_URL="http://localhost:3000"
